; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_gprobe.c_sp_close.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_gprobe.c_sp_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gport = type { i32, i32 }

@INVALID_HANDLE_VALUE = common dso_local global i32 0, align 4
@read_ovl = common dso_local global i32 0, align 4
@wait_ovl = common dso_local global i32 0, align 4
@write_ovl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gport*)* @sp_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sp_close(%struct.gport* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gport*, align 8
  store %struct.gport* %0, %struct.gport** %3, align 8
  %4 = load %struct.gport*, %struct.gport** %3, align 8
  %5 = getelementptr inbounds %struct.gport, %struct.gport* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @close(i32 %6)
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  %11 = load %struct.gport*, %struct.gport** %3, align 8
  %12 = getelementptr inbounds %struct.gport, %struct.gport* %11, i32 0, i32 0
  store i32 -1, i32* %12, align 4
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
